--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 		<a href=""><img src="img/Landie.png" alt="logo"></a>
 		<button>Buy Now</button>
 	</div>
+	<div class="intro">
+		<h1>Introduce Your Product Quickly & Effectively</h1>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus <br> mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+        <button>Purchase UI Kit</button>
+        <button class="more">Learn More</button>
+	</div>
 </div>
 </header>	
 </body>
