Added maincard and made it responsive

--- a/index.html
+++ b/index.html
@@ -31,5 +31,28 @@
         <button class="more">Learn More</button>
 	</div>
 </div>
-</header>	
+</header>
+<main>
+<div class="container">
+	<div class="maincard">
+	<div class="info">
+		<h3>Light, Fast & Powerful</h3>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus <br> mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+		<div class="details">
+			<div class="card1">
+			<img src="img/E.png" alt="tablet">
+			<h5>Title Goes Here</h5>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>				
+			</div>
+			<div class="card1">
+			<img src="img/E.png" alt="tablet">
+			<h5>Title Goes Here</h5>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>				
+			</div>
+		</div>
+	</div>
+	<img src="img/u.png" alt="interface">
+	</div>
+</div>
+</main>	
 </body>
