Added cards with main information

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
 	</div>
 	<img src="img/u.png" alt="interface">
 	</div>
+	<div class="card">
+		<img src="img/undraw_happy_news_hxmt.png" alt="email">
+		<div class="about">
+			<h3>Light, Fast & Powerful</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus <br> mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+		</div>
+	</div>
+	<div class="card">
+		<img class="small" src="img/undraw_social_influencer_sgsv.png" alt="scroll">
+		<div class="about">
+			<h3>Light, Fast & Powerful</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus <br> mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+		</div>
+	</div>
+	<div class="card">
+		<img src="img/undraw_mention_6k5d.png" alt="name">
+		<div class="about">
+			<h3>Light, Fast & Powerful</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus <br> mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+			<button>Purchase Now</button>
+		</div>
+	</div>		
 </div>
 </main>	
 </body>
