--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>PPlanner</title>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://kit.fontawesome.com/995a9920b7.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
 </head>
@@ -17,9 +19,9 @@
 			<li><a href="">Contact</a></li>
 		</ul>
 		<select>
-			<option><a href="">Home</a></option>
-			<option><a href="">About</a></option>
-			<option><a href="">Contact</a></option>
+			<option>Home</option>
+			<option>About</option>
+			<option>Contact</option>
 		</select>
 		<a href=""><img src="img/Landie.png" alt="logo"></a>
 		<button>Buy Now</button>
@@ -76,5 +78,38 @@
 		</div>
 	</div>		
 </div>
+<div class="pricing">
+<div class="container">
+	<h3>A Price To Suit Everyone</h3>
+	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
+	<h1>&#36;40</h1>
+	<p>UI Design Kit</p>
+	<p class="grey">See, One price. Simple.</p>
+	<button>Purchase Now</button>
+</div>
+</div>
 </main>	
+<footer>
+<div class="container">
+	<div class="purchase">
+		<p>&copy;2020 Yourcompany</p>
+		<a href=""><img src="img/Landie.png" alt="logo"></a>
+		<button>Purchase Now</button>
+	</div>
+	<div class="contact">
+		<ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+		<div class="socialmedia">
+			<a href=""><i class="fab fa-facebook-f"></i></a>
+			<a href=""><i class="fab fa-linkedin-in"></i></a>
+			<a href=""><i class="fab fa-twitter"></i></a>
+			<a href=""><i class="fab fa-youtube"></i></a>
+			<a href=""><i class="fab fa-instagram"></i></a>
+		</div>
+	</div>
+</div>
+</footer>
 </body>
